IDLER: added CORD default handler for swagger
